Archive2/fa/91392c96b41afe/output
main.cpp:14:1: error: 'enable_if_t' in namespace 'std' does not name a type
 std::enable_if_t<std::is_integral<T>::value, T> //Using helper type
 ^
main.cpp: In function 'int main()':
main.cpp:47:12: error: no matching function for call to 'foo1(int)'
     foo1(10); // OK, calls the second version of foo1()
            ^
main.cpp:47:12: note: candidate is:
main.cpp:7:5: note: template<class T> typename std::enable_if<std::is_floating_point<_Tp>::value, T>::type foo1(T)
     foo1(T t) 
     ^
main.cpp:7:5: note:   template argument deduction/substitution failed:
main.cpp: In substitution of 'template<class T> typename std::enable_if<std::is_floating_point<_Tp>::value, T>::type foo1(T) [with T = int]':
main.cpp:47:12:   required from here
main.cpp:7:5: error: no type named 'type' in 'struct std::enable_if<false, int>'
main.cpp:56:15: warning: unused variable 'a1' [-Wunused-variable]
     A<double> a1; // OK
               ^
